# AutoScientist

./: .env.example  .gitattributes  .gitignore  README.md  bioautosci.settings.example.json  docker-compose.yml  index.html  pyproject.toml  tool_inventory.json
apps/api/: pyproject.toml
apps/api/app/: config.py  env.py  main.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/migrations/: 001_initial_schema.sql  002_scientific_memory.sql
apps/api/app/routes/: billing.py  board.py  frameworks.py  memory.py  models.py  objectives.py  projects.py  reports.py  runs.py  score.py  tools.py
apps/api/app/services/: abstention_policy.py  actionability_assessor.py  adaptive_tool_planner.py  agent_orchestrator.py  billing_service.py  biotruth_critic.py  contradiction_detector.py  evidence_hierarchy.py  llm_provider.py  local_runner.py  model_onboarding.py  neural_workflow_policy.py  open_scientist_adapters.py  project_workspace.py  queue_worker.py  run_executor.py  scientific_memory.py  scientific_planning.py  scientific_strategy.py  tool_inventory_exporter.py  tooluniverse_adapter.py
apps/api/tests/: test_api.py  test_claw_project_cli.py  test_llm_provider.py  test_project_routes.py  test_project_workspace.py  test_scientific_planning.py  test_scientific_strategy.py
benchmarks/: README.md  autoscientist_bench_v0_1.json  autoscientist_bench_v0_2_public.json  autoscientist_bench_v0_2_public.jsonl  autoscientist_bench_v0_2_public.md  autoscientist_biotruth_20_case_gate.json  autoscientist_biotruth_20_case_gate.md  autoscientist_biotruth_20_case_gate_tasks.jsonl  autoscientist_biotruth_v0_1.json  autoscientist_biotruth_v0_1.md  autoscientist_biotruth_v0_1_tasks.jsonl  autoscientist_biotruth_v0_2.json  autoscientist_biotruth_v0_2.md  autoscientist_biotruth_v0_2_tasks.jsonl  autoscientist_deep_egfr_nsclc_resistance_case.json  autoscientist_deep_ra_refractory_case.json  biotruth_rubric_v0_1.json  biotruth_rubric_v0_2.json  biotruth_seed_cases_v0_1.json  biotruth_seed_cases_v0_2.json
docs/: AUTOSCIENTIST_BASELINE_20260524.md  AUTOSCIENTIST_BENCH.md  AUTOSCIENTIST_SCIENTIFIC_VALIDATION_ROADMAP.md  BIOTRUTH_100_CASE_SELECTION.md  BIOTRUTH_20_CASE_GATE_20260524_SALVAGE.md  BIOTRUTH_26_SUCCESS_ANALYSIS_20260524.md  BIOTRUTH_ACTIONABILITY_CALIBRATION_20260524.md  BIOTRUTH_BENCHMARK.md  CLAIMS_AND_LIMITATIONS.md  CLOUD_DEPLOYMENT.md  DECISION_CALIBRATION_GATE_V03.md  DEEP_DISCOVERY_RUN_FINDINGS_2026_05_23.md  DEEP_EGFR_NSCLC_RESISTANCE_CASE_STUDY_RUNBOOK.md  DEEP_RA_REFRACTORY_CASE_STUDY_RUNBOOK.md  END_TO_END_DISCOVERY_CASE_STUDIES.md  INSTALL.md  LOCAL_FRAMEWORK.md  MARINKA_UPDATE_2026-05-20.md  NEXT_DEEP_ANALYSIS_20260525.md  PERSISTENT_SCIENTIFIC_PROJECTS_README.md  RUNPOD_100_DEEP_DISCOVERY_RUNBOOK.md  RUNPOD_BIOTRUTH_4_CASE_CANARY.md  RUNPOD_GPU_HANDOFF.md  (+9 more)
(+145 files in other folders)
