[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-auto-scientist"
version = "0.1.0"
description = "Local ToolUniverse-native AI scientist workbench for auditable biomedical hypothesis generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "BioAutoScientist contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
tooluniverse = [
  "tooluniverse==1.0.4",
  "tokenizers>=0.19,<0.20",
]
neural = [
  "torch>=2.2.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
  "build>=1.2.0",
  "twine>=5.1.0",
]

[project.scripts]
bioautosci = "app.services.local_runner:main"
bioautosci-worker = "app.services.queue_worker:main"
claw-project = "tools.claw_project:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["apps/api", "."]
include = ["app*", "agents*", "tools", "tools.custom_tools*"]
exclude = ["apps*", "outputs*", "notebooks*", "infra*", "docs*", "tools.tests*"]

[tool.pytest.ini_options]
pythonpath = ["apps/api", "."]
testpaths = ["apps/api/tests", "tools/tests"]

[tool.ruff]
line-length = 100
