[project]
name = "bio-auto-scientist-api"
version = "0.1.0"
description = "FastAPI backend for BioAutoScientist"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
tooluniverse = [
  "tooluniverse",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["../../", "."]
testpaths = ["tests", "../../tools/tests"]

[tool.ruff]
line-length = 100
